# mtu-chapel-attendance-backend

./: .env.local  .gitignore  app.py  pyproject.toml  test.py  warning_letter.docx
app/: __init__.py
app/authentication/: auth.py  hashing.py
app/data/: COMPREHENSIVE_LIST_OF_REGISTERED_STUDENTS_WITH_ALLOCATED_HOSTEL.xlsx  MTU Student Database.csv  Manna water service 400 level 29 June 2022.csv
app/enums/: department_choices.py  user_roles.py
app/libraries/: mongo.py
app/middleware/: exception.py  processes.py
app/models/: __init__.py  academic_session.py  student.py  user.py
app/repository/: academic_session.py  student.py  user.py
app/router/: academic_session.py  admin.py  attendance.py  auth.py  students.py  user.py
app/schemas/: student.py  user.py
app/serializer/: __init__.py  academic_session.py
app/service/: token.py
app/settings/: __init__.py
app/temp/: func.py
app/utils/: exceptions.py  resolve.py  response.py  warning_letter.py
authentication/: auth.py
client/: response.py
data/: Manna water service 400 level 29 June 2022.csv  preprocessed.xlsx
database/: choices.py  schema.py
exceptions/: __init__.py  custom_exception.py
middleware/: exception.py  processes.py
repository/: __init__.py  academic_session.py  student.py  user.py
router/: academic_session.py  attendance.py  auth.py  students.py  user.py
settings/: __init__.py  config.py
temp/: main.py
utils/: date.py  resolve.py  warning_letter.py
validation/: __init__.py  academic_session.py  attendance.py  login.py  student.py  token.py
(+5 files in other folders)
